Bug 390965 - kaddressbook-5.7.2 without kdepim-addons crashes adding/editing contacts
Summary: kaddressbook-5.7.2 without kdepim-addons crashes adding/editing contacts
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.7.2
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-02-23 20:12 UTC by Andreas Sturmlechner
Modified: 2018-02-24 14:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Sturmlechner 2018-02-23 20:12:32 UTC
Application: kaddressbook (5.7.2)
 (Compiled from sources)
Qt Version: 5.10.1
Frameworks Version: 5.43.0
Operating System: Linux 4.15.4-gentoo x86_64
Distribution: "Gentoo Base System release 2.4.1"

-- Information about the crash:
Following a user report I removed kdepim-addons and, after creating a new 'Personal Contacts' addressbook, continued with adding a contact to it. In 2/2 attempts it failed to add the contact.

Immediately after re-adding kdepim-addons I was able to add two contacts flawlessly.

The crash can be reproduced every time.

-- Backtrace:
Application: KAddressBook (kaddressbook), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f61a2138840 (LWP 28617))]

Thread 5 (Thread 0x7f616ee9c700 (LWP 28622)):
#0  0x00007f619e7bd3aa in __GI___libc_read (fd=<optimized out>, buf=buf@entry=0x7f616ee9bb40, nbytes=nbytes@entry=16) at ../sysdeps/unix/sysv/linux/read.c:26
#1  0x00007f6196ae1530 in read (__nbytes=16, __buf=0x7f616ee9bb40, __fd=<optimized out>) at /usr/include/bits/unistd.h:44
#2  g_wakeup_acknowledge (wakeup=0x7f6170003590) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gwakeup.c:210
#3  0x00007f6196a9d4db in g_main_context_check (context=context@entry=0x7f6168000bf0, max_priority=2147483647, fds=fds@entry=0x7f6168003ce0, n_fds=n_fds@entry=1) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gmain.c:3750
#4  0x00007f6196a9d9a0 in g_main_context_iterate (context=context@entry=0x7f6168000bf0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gmain.c:3969
#5  0x00007f6196a9db0c in g_main_context_iteration (context=0x7f6168000bf0, may_block=may_block@entry=1) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gmain.c:4033
#6  0x00007f619f34f75b in QEventDispatcherGlib::processEvents (this=0x7f6168000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#7  0x00007f619f2fb79a in QEventLoop::exec (this=this@entry=0x7f616ee9bd60, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#8  0x00007f619f14cc1a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#9  0x00007f619f1514f7 in QThreadPrivate::start (arg=0x561209ea73a0) at thread/qthread_unix.cpp:376
#10 0x00007f6198b858ea in start_thread (arg=0x7f616ee9c700) at pthread_create.c:465
#11 0x00007f619e7cd68f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f6177fff700 (LWP 28620)):
#0  g_mutex_unlock (mutex=0x7f6170000bf0) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gthread-posix.c:1348
#1  0x00007f6196a9cf28 in g_main_context_prepare (context=context@entry=0x7f6170000bf0, priority=priority@entry=0x7f6177ffec20) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gmain.c:3534
#2  0x00007f6196a9d92b in g_main_context_iterate (context=context@entry=0x7f6170000bf0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gmain.c:3952
#3  0x00007f6196a9db0c in g_main_context_iteration (context=0x7f6170000bf0, may_block=may_block@entry=1) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gmain.c:4033
#4  0x00007f619f34f75b in QEventDispatcherGlib::processEvents (this=0x7f6170000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f619f2fb79a in QEventLoop::exec (this=this@entry=0x7f6177ffed60, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#6  0x00007f619f14cc1a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#7  0x00007f619f1514f7 in QThreadPrivate::start (arg=0x561209e4b490) at thread/qthread_unix.cpp:376
#8  0x00007f6198b858ea in start_thread (arg=0x7f6177fff700) at pthread_create.c:465
#9  0x00007f619e7cd68f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f617d485700 (LWP 28619)):
#0  0x00007f619e7c1c55 in __GI___poll (fds=0x7f6178004db0, nfds=1, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f6196a9d9f9 in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x7f6178004db0, timeout=<optimized out>, context=0x7f6178000bf0) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gmain.c:4271
#2  g_main_context_iterate (context=context@entry=0x7f6178000bf0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gmain.c:3967
#3  0x00007f6196a9db0c in g_main_context_iteration (context=0x7f6178000bf0, may_block=may_block@entry=1) at /var/tmp/portage/dev-libs/glib-2.52.3/work/glib-2.52.3/glib/gmain.c:4033
#4  0x00007f619f34f75b in QEventDispatcherGlib::processEvents (this=0x7f6178000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f619f2fb79a in QEventLoop::exec (this=this@entry=0x7f617d484d30, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#6  0x00007f619f14cc1a in QThread::exec (this=this@entry=0x7f619dc9bd60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:522
#7  0x00007f619da28d95 in QDBusConnectionManager::run (this=0x7f619dc9bd60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:178
#8  0x00007f619f1514f7 in QThreadPrivate::start (arg=0x7f619dc9bd60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:376
#9  0x00007f6198b858ea in start_thread (arg=0x7f617d485700) at pthread_create.c:465
#10 0x00007f619e7cd68f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f6186d06700 (LWP 28618)):
#0  0x00007f619e7c1c55 in __GI___poll (fds=0x7f6186d05c60, nfds=1, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f61963888f2 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007f619638a707 in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007f618906fa69 in QXcbEventReader::run (this=0x561209a8c110) at qxcbconnection.cpp:1370
#4  0x00007f619f1514f7 in QThreadPrivate::start (arg=0x561209a8c110) at thread/qthread_unix.cpp:376
#5  0x00007f6198b858ea in start_thread (arg=0x7f6186d06700) at pthread_create.c:465
#6  0x00007f619e7cd68f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f61a2138840 (LWP 28617)):
[KCrash Handler]
#6  ContactEditor::AddressesLocationWidget::storeContact (this=<optimized out>, contact=...) at /var/tmp/portage/kde-apps/akonadi-contacts-17.12.2/work/akonadi-contacts-17.12.2/src/contact-editor/editor/addresseditor/addresseslocationwidget.cpp:69
#7  0x00007f6195068613 in ContactEditorWidget::storeContact (this=0x56120a097960, contact=..., metaData=...) at /var/tmp/portage/kde-apps/akonadi-contacts-17.12.2/work/akonadi-contacts-17.12.2/src/contact-editor/editor/contacteditorwidget.cpp:241
#8  0x00007f619d0e91b5 in Akonadi::AkonadiContactEditor::Private::storeContact (metaData=..., addr=..., this=<optimized out>) at /var/tmp/portage/kde-apps/akonadi-contacts-17.12.2/work/akonadi-contacts-17.12.2/src/akonadi-contacts/contacteditor.cpp:198
#9  Akonadi::AkonadiContactEditor::saveContactInAddressBook (this=this@entry=0x56120a0912b0) at /var/tmp/portage/kde-apps/akonadi-contacts-17.12.2/work/akonadi-contacts-17.12.2/src/akonadi-contacts/contacteditor.cpp:302
#10 0x00007f619d0eb7cc in Akonadi::ContactEditorDialog::Private::slotOkClicked (this=0x7f6180008220, this=0x7f6180008220) at /var/tmp/portage/kde-apps/akonadi-contacts-17.12.2/work/akonadi-contacts-17.12.2/src/akonadi-contacts/contacteditordialog.cpp:108
#11 Akonadi::ContactEditorDialog::Private::Private(Akonadi::ContactEditorDialog::Mode, Akonadi::ContactEditorDialog::DisplayMode, ContactEditor::AbstractContactEditorWidget*, Akonadi::ContactEditorDialog*)::{lambda()#1}::operator()() const (__closure=<optimized out>) at /var/tmp/portage/kde-apps/akonadi-contacts-17.12.2/work/akonadi-contacts-17.12.2/src/akonadi-contacts/contacteditordialog.cpp:57
#12 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Akonadi::ContactEditorDialog::Private::Private(Akonadi::ContactEditorDialog::Mode, Akonadi::ContactEditorDialog::DisplayMode, ContactEditor::AbstractContactEditorWidget*, Akonadi::ContactEditorDialog*)::{lambda()#1}>::call({lambda()#1}&, void**) (arg=<optimized out>, f=...) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:130
#13 QtPrivate::Functor<Akonadi::ContactEditorDialog::Private::Private(Akonadi::ContactEditorDialog::Mode, Akonadi::ContactEditorDialog::DisplayMode, ContactEditor::AbstractContactEditorWidget*, Akonadi::ContactEditorDialog*)::{lambda()#1}, 0>::call<QtPrivate::List<>, void>({lambda()#1}&, void*, {lambda()#1}&*) (arg=<optimized out>, f=...) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:240
#14 QtPrivate::QFunctorSlotObject<Akonadi::ContactEditorDialog::Private::Private(Akonadi::ContactEditorDialog::Mode, Akonadi::ContactEditorDialog::DisplayMode, ContactEditor::AbstractContactEditorWidget*, Akonadi::ContactEditorDialog*)::{lambda()#1}, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=<optimized out>, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt5/QtCore/qobject_impl.h:168
#15 0x00007f619f3261d7 in QtPrivate::QSlotObjectBase::call (a=0x7ffe23b184b0, r=0x56120a052b60, this=0x561209f0c810) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:378
#16 QMetaObject::activate (sender=sender@entry=0x56120a0afa40, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3750
#17 0x00007f619f326737 in QMetaObject::activate (sender=sender@entry=0x56120a0afa40, m=m@entry=0x7f61a08ed4c0 <QDialogButtonBox::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3629
#18 0x00007f61a03ab873 in QDialogButtonBox::accepted (this=this@entry=0x56120a0afa40) at .moc/moc_qdialogbuttonbox.cpp:281
#19 0x00007f61a03abea0 in QDialogButtonBoxPrivate::_q_handleButtonClicked (this=<optimized out>) at widgets/qdialogbuttonbox.cpp:864
#20 0x00007f619f3260b3 in QMetaObject::activate (sender=sender@entry=0x56120a0b1390, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffe23b18630) at kernel/qobject.cpp:3767
#21 0x00007f619f326737 in QMetaObject::activate (sender=sender@entry=0x56120a0b1390, m=m@entry=0x7f61a08e43a0 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffe23b18630) at kernel/qobject.cpp:3629
#22 0x00007f61a0308fc2 in QAbstractButton::clicked (this=this@entry=0x56120a0b1390, _t1=<optimized out>) at .moc/moc_qabstractbutton.cpp:308
#23 0x00007f61a03091da in QAbstractButtonPrivate::emitClicked (this=0x56120a079590) at widgets/qabstractbutton.cpp:414
#24 0x00007f61a030a5aa in QAbstractButtonPrivate::click (this=0x56120a079590) at widgets/qabstractbutton.cpp:407
#25 0x00007f61a030a79d in QAbstractButton::mouseReleaseEvent (this=0x56120a0b1390, e=0x7ffe23b18ad0) at widgets/qabstractbutton.cpp:1011
#26 0x00007f61a02563a8 in QWidget::event (this=0x56120a0b1390, event=0x7ffe23b18ad0) at kernel/qwidget.cpp:9277
#27 0x00007f61a021763c in QApplicationPrivate::notify_helper (this=this@entry=0x561209a72350, receiver=receiver@entry=0x56120a0b1390, e=e@entry=0x7ffe23b18ad0) at kernel/qapplication.cpp:3732
#28 0x00007f61a021f33f in QApplication::notify (this=<optimized out>, receiver=0x56120a0b1390, e=0x7ffe23b18ad0) at kernel/qapplication.cpp:3208
#29 0x00007f619f2fca27 in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x56120a0b1390, event=event@entry=0x7ffe23b18ad0) at kernel/qcoreapplication.cpp:1050
#30 0x00007f61a021e312 in QCoreApplication::sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#31 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x56120a0b1390, event=event@entry=0x7ffe23b18ad0, alienWidget=alienWidget@entry=0x56120a0b1390, nativeWidget=0x56120a052b60, buttonDown=buttonDown@entry=0x7f61a090d810 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2711
#32 0x00007f61a02713a3 in QWidgetWindow::handleMouseEvent (this=this@entry=0x56120a1fa520, event=event@entry=0x7ffe23b18ec0) at kernel/qwidgetwindow.cpp:661
#33 0x00007f61a0273989 in QWidgetWindow::event (this=0x56120a1fa520, event=0x7ffe23b18ec0) at kernel/qwidgetwindow.cpp:280
#34 0x00007f61a021763c in QApplicationPrivate::notify_helper (this=this@entry=0x561209a72350, receiver=receiver@entry=0x56120a1fa520, e=e@entry=0x7ffe23b18ec0) at kernel/qapplication.cpp:3732
#35 0x00007f61a021ede4 in QApplication::notify (this=0x7ffe23b19f20, receiver=0x56120a1fa520, e=0x7ffe23b18ec0) at kernel/qapplication.cpp:3491
#36 0x00007f619f2fca27 in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x56120a1fa520, event=event@entry=0x7ffe23b18ec0) at kernel/qcoreapplication.cpp:1050
#37 0x00007f619fae189b in QCoreApplication::sendSpontaneousEvent (event=0x7ffe23b18ec0, receiver=0x56120a1fa520) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:237
#38 QGuiApplicationPrivate::processMouseEvent (e=0x56120a36d1b0) at kernel/qguiapplication.cpp:1960
#39 0x00007f619fae3485 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x56120a36d1b0) at kernel/qguiapplication.cpp:1741
#40 0x00007f619fabd9eb in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:984
#41 0x00007f61890f402b in QPAEventDispatcherGlib::processEvents (this=0x561209ad3dc0, flags=...) at qeventdispatcher_glib.cpp:70
#42 0x00007f619f2fb79a in QEventLoop::exec (this=this@entry=0x7ffe23b19130, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#43 0x00007f61a0404ad7 in QDialog::exec (this=0x56120a052b60) at dialogs/qdialog.cpp:546
#44 0x00007f619d11294a in Akonadi::StandardContactActionManager::Private::slotCreateContact (this=<optimized out>) at /var/tmp/portage/kde-apps/akonadi-contacts-17.12.2/work/akonadi-contacts-17.12.2/src/akonadi-contacts/standardcontactactionmanager.cpp:466
#45 Akonadi::StandardContactActionManager::<lambda()>::operator() (__closure=<optimized out>) at /var/tmp/portage/kde-apps/akonadi-contacts-17.12.2/work/akonadi-contacts-17.12.2/src/akonadi-contacts/standardcontactactionmanager.cpp:599
#46 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, Akonadi::StandardContactActionManager::createAction(Akonadi::StandardContactActionManager::Type)::<lambda()> >::call (arg=<optimized out>, f=...) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:130
#47 QtPrivate::Functor<Akonadi::StandardContactActionManager::createAction(Akonadi::StandardContactActionManager::Type)::<lambda()>, 0>::call<QtPrivate::List<>, void> (arg=<optimized out>, f=...) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:240
#48 QtPrivate::QFunctorSlotObject<Akonadi::StandardContactActionManager::createAction(Akonadi::StandardContactActionManager::Type)::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=<optimized out>, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt5/QtCore/qobject_impl.h:168
#49 0x00007f619f3261d7 in QtPrivate::QSlotObjectBase::call (a=0x7ffe23b19340, r=0x561209f39dc0, this=0x561209eec3c0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:378
#50 QMetaObject::activate (sender=sender@entry=0x561209ee3320, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffe23b19340) at kernel/qobject.cpp:3750
#51 0x00007f619f326737 in QMetaObject::activate (sender=sender@entry=0x561209ee3320, m=m@entry=0x7f61a08de840 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffe23b19340) at kernel/qobject.cpp:3629
#52 0x00007f61a0210e12 in QAction::triggered (this=this@entry=0x561209ee3320, _t1=<optimized out>) at .moc/moc_qaction.cpp:376
#53 0x00007f61a021355c in QAction::activate (this=0x561209ee3320, event=<optimized out>) at kernel/qaction.cpp:1167
#54 0x00007f61a030a53b in QAbstractButtonPrivate::click (this=0x561209f56a90) at widgets/qabstractbutton.cpp:397
#55 0x00007f61a030a79d in QAbstractButton::mouseReleaseEvent (this=0x561209ffe9e0, e=0x7ffe23b19810) at widgets/qabstractbutton.cpp:1011
#56 0x00007f61a03eb61a in QToolButton::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at widgets/qtoolbutton.cpp:620
#57 0x00007f61a02563a8 in QWidget::event (this=0x561209ffe9e0, event=0x7ffe23b19810) at kernel/qwidget.cpp:9277
#58 0x00007f61a030b95b in QAbstractButton::event (this=this@entry=0x561209ffe9e0, e=e@entry=0x7ffe23b19810) at widgets/qabstractbutton.cpp:968
#59 0x00007f61a03eb6b4 in QToolButton::event (this=0x561209ffe9e0, event=0x7ffe23b19810) at widgets/qtoolbutton.cpp:983
#60 0x00007f61a021763c in QApplicationPrivate::notify_helper (this=this@entry=0x561209a72350, receiver=receiver@entry=0x561209ffe9e0, e=e@entry=0x7ffe23b19810) at kernel/qapplication.cpp:3732
#61 0x00007f61a021f33f in QApplication::notify (this=<optimized out>, receiver=0x561209ffe9e0, e=0x7ffe23b19810) at kernel/qapplication.cpp:3208
#62 0x00007f619f2fca27 in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x561209ffe9e0, event=event@entry=0x7ffe23b19810) at kernel/qcoreapplication.cpp:1050
#63 0x00007f61a021e312 in QCoreApplication::sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#64 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x561209ffe9e0, event=event@entry=0x7ffe23b19810, alienWidget=alienWidget@entry=0x561209ffe9e0, nativeWidget=0x7f6178013680, buttonDown=buttonDown@entry=0x7f61a090d810 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2711
#65 0x00007f61a02713a3 in QWidgetWindow::handleMouseEvent (this=this@entry=0x56120a002360, event=event@entry=0x7ffe23b19c00) at kernel/qwidgetwindow.cpp:661
#66 0x00007f61a0273989 in QWidgetWindow::event (this=0x56120a002360, event=0x7ffe23b19c00) at kernel/qwidgetwindow.cpp:280
#67 0x00007f61a021763c in QApplicationPrivate::notify_helper (this=this@entry=0x561209a72350, receiver=receiver@entry=0x56120a002360, e=e@entry=0x7ffe23b19c00) at kernel/qapplication.cpp:3732
#68 0x00007f61a021ede4 in QApplication::notify (this=0x7ffe23b19f20, receiver=0x56120a002360, e=0x7ffe23b19c00) at kernel/qapplication.cpp:3491
#69 0x00007f619f2fca27 in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0x56120a002360, event=event@entry=0x7ffe23b19c00) at kernel/qcoreapplication.cpp:1050
#70 0x00007f619fae189b in QCoreApplication::sendSpontaneousEvent (event=0x7ffe23b19c00, receiver=0x56120a002360) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:237
#71 QGuiApplicationPrivate::processMouseEvent (e=0x56120a03f680) at kernel/qguiapplication.cpp:1960
#72 0x00007f619fae3485 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x56120a03f680) at kernel/qguiapplication.cpp:1741
#73 0x00007f619fabd9eb in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:984
#74 0x00007f61890f402b in QPAEventDispatcherGlib::processEvents (this=0x561209ad3dc0, flags=...) at qeventdispatcher_glib.cpp:70
#75 0x00007f619f2fb79a in QEventLoop::exec (this=this@entry=0x7ffe23b19e70, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#76 0x00007f619f304254 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1338
#77 0x000056120879e2e1 in main (argc=<optimized out>, argv=<optimized out>) at /var/tmp/portage/kde-apps/kaddressbook-17.12.2/work/kaddressbook-17.12.2/src/main.cpp:91

Reported using DrKonqi
Comment 1 Laurent Montel 2018-02-24 14:19:56 UTC
Git commit 815064bb7d4caa00b7aafa216ca4093bd951d148 by Laurent Montel.
Committed on 24/02/2018 at 14:18.
Pushed by mlaurent into branch 'Applications/17.12'.

Fix crash Bug 390965 - kaddressbook-5.7.2 without kdepim-addons crashes adding/editing contacts
FIXED-IN: 5.7.3

(but we can use kaddressbook without kdepim-addons)

M  +1    -1    src/contact-editor/editor/addresseditor/addresseslocationwidget.h

https://commits.kde.org/akonadi-contacts/815064bb7d4caa00b7aafa216ca4093bd951d148