Fix crash Bug 390965 - kaddressbook-5.7.2 without kdepim-addons crashes adding/editing contacts

BUG: 390965
FIXED-IN: 5.7.3

(but we can use kaddressbook without kdepim-addons)